2004-06-10  Ronald Bultje  <rbultje@ronald.bitfreak.net>

	* gst/asfdemux/gstasfdemux.c: (gst_asf_demux_init),
	(gst_asf_demux_loop), (gst_asf_demux_process_file),
	(gst_asf_demux_process_data), (gst_asf_demux_handle_data),
	(gst_asf_demux_process_object), (gst_asf_demux_get_stream),
	(gst_asf_demux_process_chunk), (gst_asf_demux_handle_sink_event),
	(gst_asf_demux_handle_src_event), (gst_asf_demux_handle_src_query),
	(gst_asf_demux_change_state):
	* gst/asfdemux/gstasfdemux.h:
	  You know Chimaira? "I - HATE - EVERYTHING". Yeah, that's what this
	  feels like. I think we should set a new requirement for demuxers
	  from now on to implement sane loop functions, data loops, query
	  and seek functions before first commit into CVS. And this commit
	  fixes all of the above.

2004-06-10  Christophe Fergeau  <teuf@gnome.org>

	* gst/tags/gstvorbistag.c: (gst_vorbis_tag_add): make sure parsed 
	  vorbis comments are properly encoded in UTF-8 before adding them
	  to a GstTagList

2004-06-09  Benjamin Otte  <otte@gnome.org>

	* ext/alsa/gstalsa.c: (add_channels):
	  handle min <= max correctly
	* ext/alsa/gstalsa.c: (gst_alsa_fixate_to_mimetype), 
	(gst_alsa_fixate_field_nearest_int), (gst_alsa_fixate):
	  add fixation functions so we fixate correctly. No preferring of alaw
	  anymore because it's the first structure.
	* ext/alsa/gstalsa.h:
	* ext/alsa/gstalsa.c: (gst_alsa_sw_params_dump),
	(gst_alsa_hw_params_dump):
	  add functions to ease debugging in alsalib
	* ext/alsa/gstalsa.c: (gst_alsa_probe_hw_params),
	(gst_alsa_set_hw_params), (gst_alsa_set_sw_params),
	(gst_alsa_start_audio):
	  only specify hw params if we really setup a format (fixes #134007 -
	  or at least works around it)

2004-06-09  Wim Taymans  <wim@fluendo.com>

	* ext/ogg/gstoggmux.c: (gst_ogg_mux_init),
	(gst_ogg_mux_next_buffer), (gst_ogg_mux_buffer_from_page),
	(gst_ogg_mux_push_page), (gst_ogg_mux_get_headers),
	(gst_ogg_mux_set_header_on_caps), (gst_ogg_mux_send_headers),
	(gst_ogg_mux_loop):